# ynab-amazon-categorizer

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  ynab_amazon_categorizer.py  ynab_config.txt.example
.claude/tdd-guard/data/: modifications.json
.github/workflows/: ci.yml  release.yml
scripts/: create-release.sh  install.bat  install.sh
src/ynab_amazon_categorizer/: __init__.py  __main__.py  _version.py  amazon_parser.py  batch.py  cli.py  config.py  exceptions.py  memo_generator.py  models.py  payloads.py  tax.py  transaction_matcher.py  transactions.py  ynab_client.py
tests/: test_amazon_parser.py  test_amazon_parser_real.py  test_cli_functions.py  test_config.py  test_memo_generator.py  test_transaction_matcher.py  test_ynab_client.py
